--- a/.github/workflows/simple-build.yml
+++ b/.github/workflows/simple-build.yml
@@ -13,7 +13,9 @@ jobs:
     steps:
     - name: Checkout code
       uses: actions/checkout@v4
-      
+      with:
+        submodules: recursive
+        
     - name: Set up JDK 8
       uses: actions/setup-java@v4
       with:
