--- a/pom.xml
+++ b/pom.xml
@@ -24,6 +24,7 @@
 
     <modules>
         <module>libs/edifactconverter</module>
+        <module>xsd</module>
         <module>cpitoedifact-converter-core</module>
     </modules>
 
