--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -10,20 +10,16 @@ jobs:
   build:
     runs-on: ubuntu-latest
     
-    strategy:
-      matrix:
-        java-version: [8, 11]
-    
     steps:
     - name: Checkout code
       uses: actions/checkout@v4
       with:
         submodules: recursive
         
-    - name: Set up JDK ${{ matrix.java-version }}
+    - name: Set up JDK 11
       uses: actions/setup-java@v4
       with:
-        java-version: ${{ matrix.java-version }}
+        java-version: '11'
         distribution: 'temurin'
         
     - name: Cache Maven dependencies
@@ -70,7 +66,7 @@ jobs:
     - name: Upload XSD files
       uses: actions/upload-artifact@v4
       with:
-        name: xsd-files-java-${{ matrix.java-version }}
+        name: xsd-files
         path: xsd-files.zip
         retention-days: 30
 
@@ -78,7 +74,7 @@ jobs:
       uses: actions/upload-artifact@v4
       if: always()
       with:
-        name: test-results-java-${{ matrix.java-version }}
+        name: test-results
         path: |
           **/target/surefire-reports/
           **/target/test-classes/
@@ -86,7 +82,7 @@ jobs:
     - name: Upload JAR artifacts
       uses: actions/upload-artifact@v4
       with:
-        name: jar-artifacts-java-${{ matrix.java-version }}
+        name: jar-artifacts
         path: |
           cpitoedifact-converter-core/target/*.jar
         retention-days: 30
@@ -94,112 +90,6 @@ jobs:
     - name: Upload fat JAR
       uses: actions/upload-artifact@v4
       with:
-        name: fat-jar-java-${{ matrix.java-version }}
+        name: fat-jar
         path: cpitoedifact-converter-core/target/*-fat.jar
         retention-days: 30
-
-  release:
-    needs: build
-    runs-on: ubuntu-latest
-    if: github.ref == 'refs/heads/main' || github.ref == 'refs/heads/master'
-    
-    strategy:
-      matrix:
-        java-version: [8, 11]
-    
-    steps:
-    - name: Checkout code
-      uses: actions/checkout@v4
-      with:
-        submodules: recursive
-        
-    - name: Set up JDK ${{ matrix.java-version }}
-      uses: actions/setup-java@v4
-      with:
-        java-version: ${{ matrix.java-version }}
-        distribution: 'temurin'
-        
-    - name: Cache Maven dependencies
-      uses: actions/cache@v4
-      with:
-        path: ~/.m2
-        key: ${{ runner.os }}-m2-${{ hashFiles('**/pom.xml') }}
-        restore-keys: ${{ runner.os }}-m2
-        
-    - name: Build project
-      run: mvn clean package -DskipTests
-
-    - name: Copy XSD files to resources
-      run: |
-        mkdir -p xsd
-        find libs/edifactconverter -name "*.xsd" -type f -exec cp {} xsd/ \;
-        
-    - name: Organize XSD files into version folders
-      run: |
-        cd xsd
-
-        # Dynamically create directories and organize XSD files by version
-        for file in *.xsd; do
-          if [[ -f "$file" ]]; then
-            # Extract version and prefix from filename
-            # Supports both EDIFACTINTERCHANGE_APERAK_11A.xsd and ORDRSP_INVOIC_96A.xsd patterns
-            if [[ $file =~ ^.*_.*_([0-9][0-9][A-Z])\.xsd$ ]]; then
-              prefix="${BASH_REMATCH[1]}"
-              version="${BASH_REMATCH[2]}"
-              
-              # Create directory for this version if it doesn't exist
-              mkdir -p "${prefix}_${version}"
-              # Move file to appropriate version folder
-              mv "$file" "${prefix}_${version}/"
-              echo "Organized $file -> ${prefix}_${version}/"
-            fi
-          fi
-        done
-
-    - name: Zip XSD files
-      run: |
-        zip -r xsd-files.zip xsd
-
-    - name: Upload XSD files
-      uses: actions/upload-artifact@v4
-      with:
-        name: xsd-files-release-java-${{ matrix.java-version }}
-        path: xsd-files.zip
-        retention-days: 90
-
-    - name: Upload test results
-      uses: actions/upload-artifact@v4
-      if: always()
-      with:
-        name: test-results-release-java-${{ matrix.java-version }}
-        path: |
-          **/target/surefire-reports/
-          **/target/test-classes/
-          
-    - name: Upload JAR artifacts
-      uses: actions/upload-artifact@v4
-      with:
-        name: jar-artifacts-release-java-${{ matrix.java-version }}
-        path: |
-          cpitoedifact-converter-core/target/*.jar
-        retention-days: 90
-        
-    - name: Upload fat JAR
-      uses: actions/upload-artifact@v4
-      with:
-        name: fat-jar-release-java-${{ matrix.java-version }}
-        path: cpitoedifact-converter-core/target/*-fat.jar
-        retention-days: 90
-
-    - name: Create release artifacts
-      run: |
-        mkdir -p release-artifacts
-        cp cpitoedifact-converter-core/target/*.jar release-artifacts/
-        cp xsd-files.zip release-artifacts/
-        
-    - name: Upload release artifacts
-      uses: actions/upload-artifact@v4
-      with:
-        name: release-artifacts-java-${{ matrix.java-version }}
-        path: release-artifacts/
-        retention-days: 90
